logs/watchdog_20251011_1634.log
[11/10/2025 16:34:27,31] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 16:34:27,62] END WATCHDOG 
